apps/todo/svc.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
  - name: http
    port: 80 # Service port
    targetPort: 8080 # Container port
