apps/todo/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: todo-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - todo.hudai.xyz
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - todo.hudai.xyz
      tls:
        mode: SIMPLE
        credentialName: todo-hudai-xyz-tls
